springboot/deployment.yaml
# springboot-app.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: springboot-app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
  namespace: springboot-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      serviceAccountName: springboot-sa
      containers:
        - name: springboot-app
          image: rukevweubio/my-spring-boot-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: springboot-app
spec:
  selector:
    app: springboot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
